<resources>
    <string name="app_name">Spinny</string>
    <string name="settings">Settings</string>
    <string name="dark_entry">Dark</string>
    <string name="light_entry">Light</string>
    <string name="system_entry">System default</string>
    <string name="dark_entry_value">2</string>
    <string name="light_entry_value">1</string>
    <string name="system_entry_value">-1</string>
    <string name="themes_preference_key">themes_preference</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_error">Email is invalid</string>
    <string name="password_error">Password is invalid</string>
    <string name="login_error_title">Login Failed</string>
    <string name="login_error_message">There was an issue logging in. Please try again.</string>
    <string name="enrollment_error_title">Enrollment Failed</string>
    <string name="enrollment_error_message">There was an issue enrolling user. Please try again.</string>
    <string name="please_wait">Please wait…</string>
    <string name="profile">Profile</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="rating">Rating</string>
    <plurals name="number_of_members">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>
    <plurals name="win">
        <item quantity="one">%d win</item>
        <item quantity="other">%d wins</item>
    </plurals>
    <plurals name="loss">
        <item quantity="one">%d loss</item>
        <item quantity="other">%d losses</item>
    </plurals>
</resources>