<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="EnrollmentFragmentBinding">

        <variable
            name="viewModel"
            type="com.alexiscrack3.spinny.login.EnrollmentViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".login.EnrollmentFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/enrollment_begin_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/horizontal_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/enrollment_end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/horizontal_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/enrollment_center_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/primaryColor"
                android:textSize="48sp"
                app:layout_constraintBottom_toTopOf="@id/enrollment_email_layout"
                app:layout_constraintEnd_toEndOf="@id/enrollment_end_guideline"
                app:layout_constraintStart_toStartOf="@id/enrollment_begin_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enrollment_email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/enrollment_center_guideline"
                app:layout_constraintEnd_toEndOf="@id/enrollment_end_guideline"
                app:layout_constraintStart_toStartOf="@id/enrollment_begin_guideline">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={viewModel.emailLiveData}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enrollment_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@id/enrollment_end_guideline"
                app:layout_constraintStart_toStartOf="@id/enrollment_begin_guideline"
                app:layout_constraintTop_toBottomOf="@id/enrollment_center_guideline">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.passwordLiveData}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/enrollment_sign_up_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onSignUpClicked()}"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="@id/enrollment_end_guideline"
                app:layout_constraintStart_toStartOf="@id/enrollment_begin_guideline"
                app:layout_constraintTop_toBottomOf="@id/enrollment_password_layout" />

            <TextView
                android:id="@+id/enrollment_no_account_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account"
                app:layout_constraintBaseline_toBaselineOf="@id/enrollment_sign_in_button"
                app:layout_constraintEnd_toStartOf="@id/enrollment_sign_in_button"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/enrollment_begin_guideline" />

            <Button
                android:id="@+id/enrollment_sign_in_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:onClick="@{(view) -> viewModel.onSignInClicked(view)}"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/enrollment_end_guideline"
                app:layout_constraintStart_toEndOf="@id/enrollment_no_account_text_view" />

            <com.alexiscrack3.spinny.views.LoadingView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:goneUnless="@{viewModel.enrollmentLiveData}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:text="@string/please_wait"
                tools:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
